# Project_KMC

./: .gitignore  CMakeLists.txt  KMC.cpp  KMC.h  README.md  global_functions.cpp  gnu.gp  initialization_data  main.cpp  main.h  main.py  memory_func.cpp
problem_space/: Surface.h  problem_space.cpp  problem_space.h
problem_space/cell/: cell.cpp  cell.h  coordinate.h  neighbor.h
visualization/: Datafile.xyz  movie-maker.tcl  mybash  tompeg.sh
visualization/gnuplot/: height.gp  runme.sh
visualization/vmd/: movie-maker.tcl  runme.sh
